Update Gradle and JavaFX plugin versions